--- a/styles/style.css
+++ b/styles/style.css
@@ -32,7 +32,7 @@
 body{
     background: linear-gradient(130.02deg, #628E75 0.66%, #1A4855 83.32%);
     background-repeat: no-repeat;
-    height: 100vh;
+    height: 110vh;
     color: var(--white)
 }
 
@@ -70,7 +70,7 @@ nav{
 
 .container-content{
     display: grid;
-    grid-template-columns: 0.4fr 1fr 1fr;
+    grid-template-columns: 3fr 2fr;
     width: 88%;
     margin-top: 90px;
 }
@@ -79,9 +79,8 @@ nav{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
     height: 260px;
-    width: 70%;
 }
 
 .content h2{
@@ -89,6 +88,7 @@ nav{
     text-transform: uppercase;
     letter-spacing: 3px;
     margin-top: 70px;
+    margin-right: 130px;
 }
 
 .content h1{
@@ -99,7 +99,7 @@ nav{
 }
 
 .content p{
-    font-size: 16px;
+    font-size: 18px;
     line-height: 160%;
     font-family: "poppoppinsBlackpinsMedium";
 }
