correcoes bug de responsividade

--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -13,13 +13,13 @@
 
 @media screen and (max-width: 900px){
     body{
-        height: 140vh !important;
+        height: 160vh !important;
     }
     .container-content{
         display: flex !important;
         flex-direction: column-reverse !important;
-        justify-content: center;
-        align-items: center;
+        justify-content: center !important;
+        align-items: center !important;
         height: auto;
     }
     .container-content{
@@ -28,9 +28,11 @@
     }
 
     .content{
-        width: 90% !important;
+        width: 70% !important;
         align-items: flex-start !important;
         margin-top: 40px;
+        margin-left: 60px;
+        justify-content:center !important;
     }
 
     .image{
@@ -44,7 +46,12 @@
     .svg{
         margin-left: 10px !important;
     }
+}
 
+@media screen and (max-width: 570px){
+    .content{
+        width: 80% !important;
 
+    }
 
 }
